# ufba-data-analysis

./: .flake8  .pre-commit-config.yaml  Makefile  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
conf/sisu/: process1.yaml  process2.yaml
data/interim/sisu/: .gitignore
data/interim/sisu_with_nse/: .gitignore
data/raw/academic/: .gitignore  ufba_academica_0321.zip.dvc
data/raw/geolocation/: .gitignore  municipios.csv.dvc
data/raw/sisu/: .gitignore  enem_inscritos_20151.zip.dvc  enem_inscritos_20152.zip.dvc  enem_inscritos_20161.zip.dvc  enem_inscritos_20162.zip.dvc  enem_inscritos_20171.zip.dvc  enem_inscritos_20172.zip.dvc  enem_inscritos_20181.zip.dvc
notebooks/: factor-analysis.ipynb
references/: Dicionário_Microdados_Enem_2015.xlsx
ufba_data_analysis/: sisu.py  utils.py
ufba_data_analysis/sisu/: fa.py  sisu.py
