[tool.poetry]
name = "ufba-data-analysis"
version = "0.1.0"
description = ""
authors = ["Silas Genário <sg.lopes26@gmail.com>"]
readme = "README.md"
packages = [{include = "ufba_data_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.1"
pandas = "^1.5.0"
seaborn = "^0.12.0"
numpy = "^1.23.4"
pymc = "^4.2.2"
arviz = "^0.12.1"
jupyterlab = "^3.4.8"
dvc = "^2.30.0"
dvc-gdrive = "^2.19.0"
dask = "^2022.10.0"
factor-analyzer = "^0.4.1"
scikit-learn = "^1.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
